--- a/pom.xml
+++ b/pom.xml
@@ -32,14 +32,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <!-- Other dependencies -->
 
-            <!-- Other dependencies -->
+        <!-- Spring Boot Starter Security -->
 
-            <!-- Spring Boot Starter Security -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-security</artifactId>
-            </dependency>
 
 
     </dependencies>
